--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 			<td>41</td>
 		</tr>
 		<tr id="row4">
-			<td>Sleeves</td>
+			<td>Sleeve</td>
 			<td>23</td>
 			<td>24</td>
 			<td>24</td>
